y.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment
    5          | expression ':'
    6          | error ':'

    7 assignment: ID '=' expression

    8 expression: NUMBER
    9           | ID
   10           | expression '+' expression
   11           | expression '-' expression
   12           | expression '*' expression
   13           | expression '/' expression


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 12
    '+' (43) 10
    '-' (45) 11
    '/' (47) 13
    ':' (58) 5 6
    '=' (61) 7
    error (256) 6
    NUMBER <num> (258) 8
    ID <str> (259) 7 9


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    program (12)
        on left: 1
        on right: 0
    statement_list (13)
        on left: 2 3
        on right: 1 3
    statement (14)
        on left: 4 5 6
        on right: 2 3
    assignment <num> (15)
        on left: 7
        on right: 4
    expression <num> (16)
        on left: 8 9 10 11 12 13
        on right: 5 7 10 11 12 13


State 0

    0 $accept: • program $end

    error   shift, and go to state 1
    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3

    program         go to state 4
    statement_list  go to state 5
    statement       go to state 6
    assignment      go to state 7
    expression      go to state 8


State 1

    6 statement: error • ':'

    ':'  shift, and go to state 9


State 2

    8 expression: NUMBER •

    $default  reduce using rule 8 (expression)


State 3

    7 assignment: ID • '=' expression
    9 expression: ID •

    '='  shift, and go to state 10

    $default  reduce using rule 9 (expression)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 11


State 5

    1 program: statement_list •
    3 statement_list: statement_list • statement

    error   shift, and go to state 1
    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3

    $end  reduce using rule 1 (program)

    statement   go to state 12
    assignment  go to state 7
    expression  go to state 8


State 6

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 7

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 8

    5 statement: expression • ':'
   10 expression: expression • '+' expression
   11           | expression • '-' expression
   12           | expression • '*' expression
   13           | expression • '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ':'  shift, and go to state 17


State 9

    6 statement: error ':' •

    $default  reduce using rule 6 (statement)


State 10

    7 assignment: ID '=' • expression

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 18

    expression  go to state 19


State 11

    0 $accept: program $end •

    $default  accept


State 12

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 13

   10 expression: expression '+' • expression

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 18

    expression  go to state 20


State 14

   11 expression: expression '-' • expression

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 18

    expression  go to state 21


State 15

   12 expression: expression '*' • expression

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 18

    expression  go to state 22


State 16

   13 expression: expression '/' • expression

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 18

    expression  go to state 23


State 17

    5 statement: expression ':' •

    $default  reduce using rule 5 (statement)


State 18

    9 expression: ID •

    $default  reduce using rule 9 (expression)


State 19

    7 assignment: ID '=' expression •
   10 expression: expression • '+' expression
   11           | expression • '-' expression
   12           | expression • '*' expression
   13           | expression • '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 7 (assignment)


State 20

   10 expression: expression • '+' expression
   10           | expression '+' expression •
   11           | expression • '-' expression
   12           | expression • '*' expression
   13           | expression • '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 10 (expression)


State 21

   10 expression: expression • '+' expression
   11           | expression • '-' expression
   11           | expression '-' expression •
   12           | expression • '*' expression
   13           | expression • '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 11 (expression)


State 22

   10 expression: expression • '+' expression
   11           | expression • '-' expression
   12           | expression • '*' expression
   12           | expression '*' expression •
   13           | expression • '/' expression

    $default  reduce using rule 12 (expression)


State 23

   10 expression: expression • '+' expression
   11           | expression • '-' expression
   12           | expression • '*' expression
   13           | expression • '/' expression
   13           | expression '/' expression •

    $default  reduce using rule 13 (expression)
